--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Katie Gardner</title>
+    <!-- styles -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <h1>Katie Gardner</h1>
+    
+    <!-- nav bar -->
+    <div class ="big-container">
+    <nav class= "nav-container">
+    <ul class= "nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#box">Skills</a></li>
+        <li><a href="#box">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+    <!-- me feature -->
+    <div class = "container">
+    <div class="feature">
+        <img src="headshot.jpg" alt="Katie's headshot">
+        <h1>Hi, I'm Katie. <br> A Front End Developer from Mesa, AZ. </h1>
+        
+    </div>
+</div>
+</div>
+    <hr>
+    <!-- about -->
+    <div id="about">
+        <h2 class="about-title">About Me</h2>
+        <p class="bio">I'm a current DevMountain student focusing on front end web development. I come to development with a
+            sustainability background. This means I like taking apart complex problems to find simple scalable
+            solutions. When I take a break from the screen, I can be found baking pies and exploring the Arizona
+            wilderness. </p>
+    </div>
+    <hr>
+    <!-- skills and projects  -->
+    <div class='skill-project'>
+        <div class="box">
+            <h2>Skills</h2>
+            <i class="fab fa-css3-alt fa-5x"></i>
+            <i class="fab fa-html5 fa-5x"></i>
+            <i class="fab fa-js-square fa-7x"></i>
+            <i class="fab fa-node-js fa-7x"></i>
+        </div>
+        <div class="vertical"></div>
+        <div id="box">
+            <h2>Projects</h2>
+            <img class = "icecream" src="icecream.png" alt="project photo">
+            <p class = "proj">What I built was a simple ice cream ordering app. The idea behind the app was to gain further
+                practice
+                with simple HTML, CSS styling and Javascript.</p>
+        </div>
+    </div>
+    <hr>
+    <div id="contact">
+        <h2>Let's connect!</h2>
+        <a href="https://www.linkedin.com/in/katie-schumacher/"><i class="fab fa-linkedin fa-5x"></i></a>
+        <a href="mailto:kmgardn3r@gmail.com"><i class="fas fa-envelope fa-5x"></i></a>
+    </div>
 </body>
+
 </html>
