pushing style changes

--- a/index.html
+++ b/index.html
@@ -17,31 +17,32 @@
 </head>
 
 <body>
-    
+
     <!-- nav bar -->
-    <div class ="big-container">
-    <nav class= "nav-container">
-    <ul class= "nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#box">Skills</a></li>
-        <li><a href="#box">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
-    <!-- me feature -->
-    <div class = "container">
-    <div class="feature">
-        <img src="headshot.jpg" alt="Katie's headshot">
-        <h1>Hi, I'm Katie. <br> A Front End Developer from Mesa, AZ. </h1>
-        
+
+    <div class="nav-container">
+        <h2 class="nav-logo">KG</h2>
+        <ul class="nav-links">
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#box-1">Skills</a></li>
+            <li><a href="#box-2">Projects</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
     </div>
-</div>
-</div>
+    <!-- me feature -->
+    <div class="container">
+        <div class="feature">
+            <img src="headshot.jpg" alt="Katie's headshot">
+            <h1>Hi, I'm Katie. <br> A Front End Developer from Mesa, AZ. </h1>
+        </div>
+    </div>
+
     <hr>
     <!-- about -->
     <div id="about">
         <h2 class="about-title">About Me</h2>
-        <p class="bio">I'm a current DevMountain student focusing on front end web development. I come to development with a
+        <p class="bio">I'm a current DevMountain student focusing on front end web development. I come to development
+            with a
             sustainability background. This means I like taking apart complex problems to find simple scalable
             solutions. When I take a break from the screen, I can be found baking pies and exploring the Arizona
             wilderness. </p>
@@ -49,18 +50,19 @@
     <hr>
     <!-- skills and projects  -->
     <div class='skill-project'>
-        <div class="box">
-            <h2>Skills</h2>
-            <i class="fab fa-css3-alt fa-5x"></i>
-            <i class="fab fa-html5 fa-5x"></i>
+        <div id="box-1">
+            <h2 class="header">Skills</h2>
+            <i class="fab fa-css3-alt fa-7x"></i>
+            <i class="fab fa-html5 fa-7x"></i>
             <i class="fab fa-js-square fa-7x"></i>
             <i class="fab fa-node-js fa-7x"></i>
         </div>
         <div class="vertical"></div>
-        <div id="box">
-            <h2>Projects</h2>
-            <img class = "icecream" src="icecream.png" alt="project photo">
-            <p class = "proj">What I built was a simple ice cream ordering app. The idea behind the app was to gain further
+        <div id="box-2">
+            <h2 class="header">Projects</h2>
+            <img class="icecream" src="icecream.png" alt="project photo">
+            <p class="proj">What I built was a simple ice cream ordering app. The idea behind the app was to gain
+                further
                 practice
                 with simple HTML, CSS styling and Javascript.</p>
         </div>
