added project link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="vertical"></div>
         <div id="box-2">
             <h2 class="header">Projects</h2>
-            <img class="icecream" src="icecream.png" alt="project photo">
+            <a href="https://trusting-hodgkin-c46f9b.netlify.app/"><img class="icecream" src="icecream.png" alt="project photo"></a>
             <p class="proj">What I built was a simple ice cream ordering app. The idea behind the app was to gain
                 further
                 practice
